[workspace]
members = ["crates/*", "node", "tools/bench", "tools/state-sync"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs", "net"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
bytes = "1.7.1"
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
rand_core = "0.6.4"
bincode = "1.3.3"
axum = "0.8.6"
tower = "0.5.2"
hyper = { version = "1.7.0", features = ["full"] }
parking_lot = "0.12"
async-trait = "0.1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
quinn = "0.11.9"
rcgen = "0.14.5"
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy", "lz4"] }
hex = { version = "0.4.3", features = ["serde"] }
futures-util = "0.3.31"
csv = "1.3.0"
# NOTE: add the `macros` feature so #[derive(NetworkBehaviour)] is available in v0.56
libp2p = { version = "0.56", default-features = false, features = ["tcp","dns","tokio","noise","yamux","gossipsub","mdns","kad","macros"] }
tokio-util = "0.7.16"
prometheus = "0.14.0"
once_cell = "1.21.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
reed-solomon-erasure = "6.0.0"
rayon = "1.11.0"
rustls = { version = "0.23", default-features = false, features = ["std","ring"] }
rustls-pki-types = "1"
