
[package]
name = "consensus"
version = "0.3.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
types = { path = "../types" }
tracing = { workspace = true }
serde = { workspace = true }
net_quic = { path = "../net_quic" }
prometheus = { workspace = true }
once_cell = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
da = { path = "../da" }
crypto = { path = "../crypto" }
serde_json = { workspace = true }
reed-solomon-erasure = { workspace = true }
