[package]
name = "net_p2p"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
libp2p = { workspace = true, features = ["tcp","dns","tokio","noise","yamux","gossipsub","mdns","kad","macros"] }
libp2p-swarm-derive = "0.35"
