
[package]
name = "rpc"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
types = { path = "../types" }
exec = { path = "../exec" }
prometheus = { workspace = true }
once_cell = { workspace = true }
