
[package]
name = "storage"
version = "0.1.3"
edition = "2021"

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dependencies]
parking_lot = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
rocksdb = { workspace = true, optional = true }
serde = { workspace = true }
bincode = { workspace = true }
