
[package]
name = "state-sync"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
exec = { path = "../../crates/exec" }
tokio = { workspace = true }
